--- a/package.json
+++ b/package.json
@@ -97,6 +97,16 @@
     "typescript": "^2.6.2"
   },
   "dependencies": {
-    "@babel/runtime": "^7.0.0-beta.35"
+    "@babel/runtime": "^7.0.0-beta.35",
+    "@types/gsap": "^1.19.2",
+    "bows": "^1.7.0",
+    "bowser": "^1.9.3",
+    "gsap": "^1.20.4",
+    "lodash": "^4.17.5",
+    "muban-core": "^1.8.2",
+    "seng-disposable": "^1.1.3",
+    "seng-event": "^1.2.3",
+    "seng-scroll-tracker": "^1.1.2",
+    "transition-controller": "^0.1.10"
   }
 }
