--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "lint": "npm-run-all lint:*",
     "lint:js": "eslint src --ext .js --cache",
     "lint:ts": "tslint src/**/*.ts -c tslint.json -p tsconfig.json -t verbose",
-    "prettify": "prettier --write \"src/**/*.{js,ts,json}\"",
+    "prettify": "prettier --write \"src/**/*.{js,ts,json}\" \"tool/scaffold/src/**/*.{js,ts,json}\" \"tool/convert/src/**/*.{js,ts,json}\"",
     "precommit": "lint-staged"
   },
   "lint-staged": {
@@ -100,11 +100,13 @@
     "@babel/runtime": "^7.0.0-beta.35",
     "bows": "^1.7.0",
     "bowser": "^1.9.3",
+    "confirm-simple": "^1.0.3",
     "lodash": "^4.17.5",
     "muban-core": "^1.8.3",
+    "node-run-cmd": "^1.0.1",
     "seng-disposable": "^1.1.3",
     "seng-event": "^1.2.3",
     "seng-scroll-tracker": "^1.1.2",
-    "transition-controller": "^0.1.12"
+    "transition-controller": "^0.1.13"
   }
 }
