--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "eslint-import-resolver-typescript": "^1.0.2",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-prettier": "^2.4.0",
+    "gsap": "^2.0.1",
     "husky": "^0.14.3",
     "jsdom": "^11.5.1",
     "jsdom-global": "^3.0.2",
@@ -107,6 +108,6 @@
     "scroll-tracker-component-manager": "^1.1.1",
     "seng-disposable": "^1.1.3",
     "seng-event": "^1.2.3",
-    "transition-controller": "^1.2.2"
+    "transition-controller": "^1.2.6"
   }
 }
