--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "muban-transition-component",
-  "version": "3.0.3",
+  "version": "4.0.0-beta.1",
   "description": "Javascript transitions for Muban components",
   "main": "./index.js",
   "types": "./index.d.ts",
