--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "jsdom-global": "^3.0.2",
     "lint-staged": "^6.0.0",
     "mocha": "^4.0.1",
+    "muban-core": "^1.13.1",
     "npm-run-all": "^4.1.2",
     "nyc": "^11.3.0",
     "prettier": "^1.9.2",
@@ -108,7 +109,6 @@
     "bowser": "^1.9.3",
     "confirm-simple": "^1.0.3",
     "lodash": "^4.17.5",
-    "muban-core": "^1.8.3",
     "node-run-cmd": "^1.0.1",
     "scroll-tracker-component-manager": "^2.1.2",
     "seng-disposable": "^1.1.3",
@@ -116,6 +116,7 @@
     "transition-controller": "^1.3.1"
   },
   "peerDependencies": {
-    "gsap": "^2.0.1"
+    "gsap": "^2.0.1",
+    "muban-core": "^1.13.1"
   }
 }
